<resources>
    <string name="app_name">Boskartoteket</string>
    <string name="login_button_text">Login</string>
    <string name="har_du_ikke_en_bruker">Har du ikke en bruker?</string>
    <string name="make_user">Registrer en bruker!</string>
    <string name="only_show_dates">Jeg vil bare se tømmedatoer</string>
    <string name="username_hint">E-post</string>
    <string name="password_hint">Passord</string>
    <string name="boskartoteket_title">Boskartoteket</string>
    <string name="forgotten_password_text">Har du glemt passordet?</string>
    <string name="datoer_string">Datoer</string>
    <string name="buy_text">Kjøp</string>
    <string name="settings_menu_text">Settings</string>
    <string name="user_full_name_text">Simon Wernersson</string>
    <string name="more_bags_text">Treng du ekstra posar</string>
    <string name="user_address">Uvdalvegen 176</string>
    <string name="waste_category_text">Våtorganisk avfall</string>
    <string name="next_pickup_text">Neste Tømmedag</string>
    <string name="pickup_date_text">Fredag 10 Mai</string>
    <string name="nr_of_days_text">11 Dager Til</string>
    <string name="mat_text_on_off">Mat</string>
    <string name="papp_text_on_off">Papp</string>
    <string name="rest_text_on_off">Rest</string>
    <string name="plast_text_on_off">Plast</string>
    <string name="farleg_text_on_off">Farleg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bestilling_title">Bestill Posar</string>
    <string name="bestilling_info_text">Her kan du bestille posar og diverse bos-artikler</string>
    <string name="artikler_title">Tilgjengelege artiklar</string>
    <string name="matavfall_title">Pose - Matavfall</string>
    <string name="waste_organic">Våtorganisk Avfall</string>
    <string name="currency">NOK:</string>
    <string name="price">19.90</string>
    <string name="add_button_text">Legg til kurv</string>
    <string name="plastic_title">Pose - Plastavfall</string>
    <string name="waste_plastic">plastemballasje</string>
    <string name="restwaste_title">Pose - Restavfall</string>
    <string name="waste_rest">restavfall</string>
    <string name="bin_title">Beholder - Plastdunk</string>
    <string name="bin_price">299.90</string>
    <string name="shopping_cart">Handlekurv</string>
    <string name="total_price_text">Total sum: NOK</string>
    <string name="nr_of_products_text">Tal på produktar:</string>
    <string name="order_button_text">Bestill Varene</string>
    <string name="wrong_input">Feil brukerinformasjon</string>

    <string name="register_title">Registrer ein brukar</string>
    <string name="confirm_String">Fullfør</string>
    <string name="dismiss_string">Avbryt</string>
    <string name="tommedatoar_text">Tømmedatoar</string>
    <string name="first_name_input">Fornavn</string>
    <string name="last_name_input">Etternavn</string>
    <string name="address_hint">Adresse</string>
    <string name="create_user">Opprett bruker</string>
    <string name="oppdater_innstillinger">Oppdater Innstillinger</string>
    <string name="b">Bø</string>
    <string name="poststed">Poststed</string>
    <string name="_3801">3801</string>
    <string name="postnummer">Postnummer</string>
    <string name="_176">176</string>
    <string name="husnummeret">Husnummeret</string>
    <string name="uvdalvegen">Uvdalvegen</string>
    <string name="gatenamn">Gatenamn</string>
    <string name="password">***************</string>
    <string name="skriv_inn_eit_passord">Skriv inn eit passord</string>
    <string name="minst_1_spesialteikn">Minst 1 spesialteikn</string>
    <string name="minst_1_tal">minst 1 tal</string>
    <string name="minst_8_teikn">Minst 8 teikn</string>
    <string name="nataniel_haraldseth_hotmail_com">Nataniel.Haraldseth@hotmail.com</string>
    <string name="epost_adresse">Epost-Adresse</string>
    <string name="haraldseth">Haraldseth</string>
    <string name="nataniel">Nataniel</string>
    <string name="f_renamn">Førenamn</string>
    <string name="brukardetaljer">Brukardetaljer</string>
    <string name="logout">logout</string>
    <string name="logg_ut">Logg ut</string>
    <string name="aktiver_p_minninger">Aktiver Påminninger</string>
    <string name="innstillinger">Innstillinger</string>
    <string name="kontrollpanel">Kontrollpanel</string>
    <string name="etternamn">Etternamn</string>
    <string name="tømme_title_text">Fyll inn din adresse for å sjå tømmedatoar for dei respektive avfallskategoriane</string>
    <string name="gatenamn_text">Gatenamn</string>
    <string name="husnummer_text">Husnummer</string>
    <string name="postnummer_text">Postnummer</string>
    <string name="poststed_text">Poststed</string>
    <string name="tømmedatoer_text">Gullbringveien 36,   3800 Bø Telemark</string>
    <string name="organic_waste_text">Våtorganisk avfall</string>
    <string name="organic_date_text">Mandag 29. April</string>
    <string name="date_text">i dag</string>
    <string name="papp_text">Papp - og papiravfall</string>
    <string name="papp_date_text">Mandag 6. Mai</string>
    <string name="papp_day_text">i dag</string>
    <string name="plastemballasje_text">Plastemballasje</string>
    <string name="plast_date_text">Mandag 29. April</string>
    <string name="plast_day_text">i dag</string>
    <string name="restavfall_text">Restavfall</string>
    <string name="rest_date_text">Mandag 29. April</string>
    <string name="rest_day_text">i dag</string>
    <string name="hazard_text">Farleg avfall</string>
    <string name="hazard_date_text">Mandag 29. April</string>
    <string name="hazard_day_text">i dag</string>
    <string name="title_activity_maps">Map</string>
    <string name="dropped_pin">Dropped Pin</string>
</resources>
